--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.0.0-rc.20",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-json-tree-view": "^2.1.4",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5"
   },
